--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="./css/styles1.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body class="container">
     <header>
 
         <nav>
