--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <nav>
             <!--Top bar -->
 
-            <a href="./index.html" class="logo">WebStudio</a>
-
+            <h1>
+                <a href="./index.html" class="logo">WebStudio</a>
+            </h1>
             <ul>
                 <li>
                     <a href="./index.html" class="header-navigation-link
@@ -37,7 +38,7 @@
         </nav>
         <ul>
             <!--Contacts/email-->
-            <li>
+            <li class="positioning-header-email-phone">
                 <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com </a>
             </li>
             <li>
@@ -51,7 +52,7 @@
         <section class="hero">
             <!--Button middle segment-->
 
-            <h1 class="hero-titles"> EFFECTIVE SOLUTIONS FOR<br> YOUR BUSINESS</h1>
+            <h2 class="hero-titles"> EFFECTIVE SOLUTIONS FOR<br> YOUR BUSINESS</h2>
 
             <button type="button" class="hero-button">Request Our Service</button>
 
