--- a/index.html
+++ b/index.html
@@ -14,147 +14,174 @@
     <link href="./css/styles1.css" rel="stylesheet" type="text/css">
 </head>
 
-<body class="container">
-    <header>
+<body>
 
-        <nav>
-            <!--Top bar -->
+    <header class="header-section">
+        <div class="container header-container">
+            <nav>
+                <!--Top bar -->
 
-            <h1>
-                <a href="./index.html" class="logo">WebStudio</a>
-            </h1>
-            <ul>
-                <li>
-                    <a href="./index.html" class="header-navigation-link
-                  header-navigation-link-current  ">Studio</a>
+                <h1 class="header-navigation-link">
+                    <a href="./index.html" class="logo header-logo ">WebStudio</a>
+                </h1>
+                <ul class="navigation-list-1">
+
+                    <li class="navigation-item">
+                        <a href="./index.html"
+                            class="header-navigation-link   header-navigation-link-current  ">Studio</a>
+                    </li>
+
+                    <li class="navigation-item">
+                        <a href="portfolio.html" class="header-navigation-link">Portfolio</a>
+                    </li>
+
+                    <li class="navigation-item">
+                        <a href="#" class="header-navigation-link">Contacts</a>
+                    </li>
+                </ul>
+            </nav>
+
+            <ul class="header-contacts-1">
+
+                <!--Contacts/email-->
+                <li class="navigation-contact-info-1">
+                    <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com </a>
                 </li>
-                <li>
-                    <a href="portfolio.html" class="header-navigation-link">Portfolio</a>
+                <li class="navigation-contact-info-1">
+                    <a href="tel:+380961111111" class="header-link">+38 096 111 11 11 </a>
                 </li>
-                <li>
-                    <a href="#" class="header-navigation-link">Contacts</a>
-                </li>
+
             </ul>
-        </nav>
-        <ul>
-            <!--Contacts/email-->
-            <li class="positioning-header-email-phone">
-                <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com </a>
-            </li>
-            <li>
-                <a href="tel:+380961111111" class="header-link">+38 096 111 11 11 </a>
-            </li>
-        </ul>
-
+        </div>
     </header>
 
     <main>
         <section class="hero">
-            <!--Button middle segment-->
+            <div class="container">
+                <!--Button middle segment-->
 
-            <h2 class="hero-titles"> EFFECTIVE SOLUTIONS FOR<br> YOUR BUSINESS</h2>
+                <h2 class="hero-titles"> EFFECTIVE SOLUTIONS FOR<br> YOUR BUSINESS</h2>
 
-            <button type="button" class="hero-button">Request Our Service</button>
+                <section class="hero-button-positioning">
 
+                    <button type="button" class="hero-button">Request Our Service</button>
+
+                </section>
+            </div>
         </section>
 
         <section class="paragraphs-discription">
-            <!--middle segment-->
-            <h2 class="our-futures"> our futures</h2>
-            <ul>
+            <div class="container">
+                <!--middle segment-->
+                <h2 class="our-futures"> our futures</h2>
 
-                <li>
-                    <h3 class="titles-for-paragraphs">ATTENTION TO DETAILS</h3>
-                    <p class="text-for-paragraphs">
-                        We go into all the details and processes of your business to develop a customized solution.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="titles-for-paragraphs">PUNCTUALITY</h3>
-                    <p class="text-for-paragraphs">
-                        With us, you can feel safe and secure. An important principle of the company: respect your time
-                        and
-                        respect the agreed deadlines.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="titles-for-paragraphs">PLANNING</h3>
-                    <p class="text-for-paragraphs">
-                        You will be able to observe and participate in every phase of solution development and
-                        implementation.
-                    </p>
-                </li>
-                <li>
-                    <h3 class="titles-for-paragraphs">MODERN TECHNOLOGIES</h3>
-                    <p class="text-for-paragraphs">
-                        We use innovative tools to solve assigned tasks. It's time to simplify work processes.
-                    </p>
-                </li>
-            </ul>
+                <ul class="positioning-for-paragraphs-1">
+
+                    <li class="paragraphs-item-1">
+                        <h3 class="titles-for-paragraphs">ATTENTION TO DETAILS</h3>
+                        <p class="text-for-paragraphs">
+                            We go into all the details and processes of your business to develop a customized solution.
+                        </p>
+                    </li>
+                    <li class="paragraphs-item-1">
+                        <h3 class="titles-for-paragraphs">PUNCTUALITY</h3>
+                        <p class="text-for-paragraphs">
+                            With us, you can feel safe and secure. An important principle of the company: respect your
+                            time
+                            and
+                            respect the agreed deadlines.
+                        </p>
+                    </li>
+                    <li class="paragraphs-item-1">
+                        <h3 class="titles-for-paragraphs">PLANNING</h3>
+                        <p class="text-for-paragraphs">
+                            You will be able to observe and participate in every phase of solution development and
+                            implementation.
+                        </p>
+                    </li>
+                    <li class="paragraphs-item-1">
+                        <h3 class="titles-for-paragraphs">MODERN TECHNOLOGIES</h3>
+                        <p class="text-for-paragraphs">
+                            We use innovative tools to solve assigned tasks. It's time to simplify work processes.
+                        </p>
+                    </li>
+                </ul>
+            </div>
         </section>
 
         <section>
             <!--images segment-->
+            <div class="container">
+                <h2 class="title-for-images1"> What we do</h2>
+                <ul class="what-we-do-positioning">
 
-            <h2 class="title-for-images1"> What we do</h2>
-            <ul>
+                    <li class="features-item-1">
+                        <img src="./images/firstpic.jpg" alt=" DESKTOP APPS" width="370">
+                    </li>
+                    <li class="features-item-1">
+                        <img src="./images/secondpic.jpg" alt="Mobile APPS" width="370">
+                    </li>
+                    <li class="features-item-1">
+                        <img src="./images/thirdpic.jpg" alt=" DESIGN SOLUTIONS" width="370">
+                    </li>
 
-                <li><img src="./images/firstpic.jpg" alt=" DESKTOP APPS" width="370"></li>
-                <li><img src="./images/secondpic.jpg" alt="Mobile APPS" width="370"></li>
-                <li><img src="./images/thirdpic.jpg" alt=" DESIGN SOLUTIONS" width="370"></li>
-
-            </ul>
-
+                </ul>
+            </div>
         </section>
 
         <section class="text-for-profilepics">
             <!--profiles of people smiling unnessesarily-->
+            <div class="container ">
+                <h2 class="title-for-images2">Our Team </h2>
 
-            <h2 class="title-for-images2">Our Team </h2>
-            <ul>
-                <li>
-                    <img src="./images/profilespic1.jpg" alt="Christopher Walker" width="270">
-                    <h3 class="profile-images-title"> Christopher Walker </h3>
-                    <p class="paragraphs">Product Designer</p>
-                </li>
-                <li>
-                    <img src="./images/profilepic2.jpg" alt="Kylie Evans" width="270">
-                    <h3 class="profile-images-title"> Kylie Evans </h3>
-                    <p class="paragraphs">Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./images/profilepic3.jpg" alt="Ryan Harris" width="270">
-                    <h3 class="profile-images-title"> Ryan Harris </h3>
-                    <p class="paragraphs">Marketing</p>
-                </li>
-                <li>
-                    <img src="./images/profilepic4.jpg" alt="Tyler Moore" width="270">
-                    <h3 class="profile-images-title"> Tyler Moore </h3>
-                    <p class="paragraphs">UI Designer</p>
-                </li>
-            </ul>
+                <ul class="profilepic-positioning-1">
 
+                    <li class="profilepic-item">
+                        <img src="./images/profilespic1.jpg" alt="Christopher Walker" width="270">
+                        <h3 class="profile-images-title"> Christopher Walker </h3>
+                        <p class="paragraphs">Product Designer</p>
+                    </li>
+                    <li class="profilepic-item">
+                        <img src="./images/profilepic2.jpg" alt="Kylie Evans" width="270">
+                        <h3 class="profile-images-title"> Kylie Evans </h3>
+                        <p class="paragraphs">Frontend Developer</p>
+                    </li>
+                    <li class="profilepic-item">
+                        <img src="./images/profilepic3.jpg" alt="Ryan Harris" width="270">
+                        <h3 class="profile-images-title"> Ryan Harris </h3>
+                        <p class="paragraphs">Marketing</p>
+                    </li>
+                    <li class="profilepic-item">
+                        <img src="./images/profilepic4.jpg" alt="Tyler Moore" width="270">
+                        <h3 class="profile-images-title"> Tyler Moore </h3>
+                        <p class="paragraphs">UI Designer</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
-    <footer>
+    <footer class="footer-paddings">
         <!--Bottom segment-->
-        <a href="./index.html" class="logo">WebStudio</a>
-        <address>
-            <ul>
-                <li class="white-address">
-                    <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park Ave,
-                        New York, NY 10065,
-                        <br>United States</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
-                </li>
-            </ul>
-        </address>
+        <div class="container">
+            <a href="./index.html" class="logo">WebStudio</a>
+            <address>
+                <ul>
+                    <li class="white-address">
+                        <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park
+                            Ave,
+                            New York, NY 10065,
+                            <br>United States</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 
 </body>
