--- a/portfolio.html
+++ b/portfolio.html
@@ -16,139 +16,147 @@
 </head>
 
 <body>
-    <header>
-        <h1>
-            <a href="index.html" class="logo">WebStudio</a>
-        </h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="./index.html" class="header-navigation-link ">Studio</a>
-                </li>
-                <li>
-                    <a href="portfolio.html" class="header-navigation-link 
+    <header class="header-section-2">
+        <div class="container header-container-2">
+            <h1 class="header-navigation-link-2">
+                <a href="index.html" class="logo header-logo">WebStudio</a>
+            </h1>
+            <nav>
+                <ul class="navigation-list-2">
+
+                    <li class="navigation-item-2">
+                        <a href="index.html" class="header-navigation-link ">Studio</a>
+                    </li>
+                    <li class="navigation-item-2">
+                        <a href="portfolio.html" class="header-navigation-link 
                     header-navigation-link-current">Portfolio</a>
+                    </li>
+                    <li class="navigation-item-2">
+                        <a href="#" class="header-navigation-link">Contacts</a>
+                    </li>
+                </ul>
+
+            </nav>
+            <ul class="header-contacts-2">
+                <li class="navigation-contact-info-2">
+                    <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
                 </li>
-                <li>
-                    <a href="#" class="header-navigation-link">Contacts</a>
+
+                <li class="navigation-contact-info-2">
+                    <a href="tel:+12127724150" class="header-link">+1 212-772-4150</a>
                 </li>
             </ul>
-
-        </nav>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
-            </li>
-
-            <li>
-                <a href="tel:+12127724150" class="header-link">+1 212-772-4150</a>
-            </li>
-        </ul>
+        </div>
     </header>
 
     <main class="mainpagesyle">
         <!-- buttons/filters for the body-->
         <section>
-            <ul class="filters-all-buttons">
+            <div class="container">
+                <ul class="filters-all-buttons">
 
-                <li class="all-blue-button">
-                    <button type="button">All</button>
-                </li>
-                <li class="all-buttons">
-                    <button type="button">Web-sites</button>
-                </li>
-                <li class="all-buttons">
-                    <button type="button">Apps</button>
-                </li>
-                <li class="all-buttons">
-                    <button type="button">Design</button>
-                </li>
-                <li class="all-buttons">
-                    <button type="button">marketing</button>
-                </li>
-            </ul>
+                    <li class="all-blue-button button-positioning-list-2">
+                        <button type="button">All</button>
+                    </li>
+                    <li class="all-buttons button-positioning-list-2">
+                        <button type="button">Web-sites</button>
+                    </li>
+                    <li class="all-buttons button-positioning-list-2">
+                        <button type="button">Apps</button>
+                    </li>
+                    <li class="all-buttons button-positioning-list-2">
+                        <button type="button">Design</button>
+                    </li>
+                    <li class="all-buttons button-positioning-list-2">
+                        <button type="button">marketing</button>
+                    </li>
+                </ul>
 
 
-            <ul class="the-9-images text-for-profilepics2">
+                <ul class="the-9-images text-for-profilepics2">
 
-                <li class=" computerimg1-9-same">
-                    <img src="images/computerpic.jpg" alt="computer" width="370">
-                    <h3 class="profile-images-title-2">Technoduck</h3>
-                    <p class="paragraphs2">Web-site</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/computerpic.jpg" alt="computer" width="370">
+                        <h3 class="profile-images-title-2">Technoduck</h3>
+                        <p class="paragraphs2">Web-site</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/baskitballpic.jpg" alt="baskitball" width="370">
-                    <h3 class="profile-images-title-2">Poster New Orlean vs Golden Star</h3>
-                    <p class="paragraphs2">Design</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/baskitballpic.jpg" alt="baskitball" width="370">
+                        <h3 class="profile-images-title-2">Poster New Orlean vs Golden Star</h3>
+                        <p class="paragraphs2">Design</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/seafoodpic.jpg" alt="seafoodpic" width="370">
-                    <h3 class="profile-images-title-2">Seafood Restaurant</h3>
-                    <p class="paragraphs2">Apps</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/seafoodpic.jpg" alt="seafoodpic" width="370">
+                        <h3 class="profile-images-title-2">Seafood Restaurant</h3>
+                        <p class="paragraphs2">Apps</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/headphonespic.jpg" alt="headphones" width="370">
-                    <h3 class="profile-images-title-2">Project Prime</h3>
-                    <p class="paragraphs2">Marketing</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/headphonespic.jpg" alt="headphones" width="370">
+                        <h3 class="profile-images-title-2">Project Prime</h3>
+                        <p class="paragraphs2">Marketing</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/brickpic.jpg" alt="brickpic" width="370">
-                    <h3 class="profile-images-title-2">Project Boxes</h3>
-                    <p class="paragraphs2">Apps</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/brickpic.jpg" alt="brickpic" width="370">
+                        <h3 class="profile-images-title-2">Project Boxes</h3>
+                        <p class="paragraphs2">Apps</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/screenpic.jpg" alt="screenpic" width="370">
-                    <h3 class="profile-images-title-2">Inspiration has no Borders</h3>
-                    <p class="paragraphs2">Web-site</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/screenpic.jpg" alt="screenpic" width="370">
+                        <h3 class="profile-images-title-2">Inspiration has no Borders</h3>
+                        <p class="paragraphs2">Web-site</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/bookpic.jpg" alt="bookpic" width="370">
-                    <h3 class="profile-images-title-2">Limited Edition</h3>
-                    <p class="paragraphs2">Design</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/bookpic.jpg" alt="bookpic" width="370">
+                        <h3 class="profile-images-title-2">Limited Edition</h3>
+                        <p class="paragraphs2">Design</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/labeltacpic.jpg" alt="labelpic" width="370">
-                    <h3 class="profile-images-title-2">Project LAB</h3>
-                    <p class="paragraphs2">Marketing</p>
-                </li>
+                    <li class="computerimg1-9-same">
+                        <img src="images/labeltacpic.jpg" alt="labelpic" width="370">
+                        <h3 class="profile-images-title-2">Project LAB</h3>
+                        <p class="paragraphs2">Marketing</p>
+                    </li>
 
-                <li class="computerimg1-9-same">
-                    <img src="images/typingpic.jpg" alt="typingpic" width="370">
-                    <h3 class="profile-images-title-2">Growing Business</h3>
-                    <p class="paragraphs2">Apps</p>
-                </li>
-            </ul>
+                    <li class="computerimg1-9-same">
+                        <img src="images/typingpic.jpg" alt="typingpic" width="370">
+                        <h3 class="profile-images-title-2">Growing Business</h3>
+                        <p class="paragraphs2">Apps</p>
+                    </li>
+                </ul>
+            </div>
         </section>
     </main>
 
-    <footer class="footerplacement">
-        <!--footer-->
-        <h2>
-            <a href="#" class="logo">WebStudio </a>
-        </h2>
+    <footer class="footer-paddings-2">
+        <div class="container">
+            <!--footer-->
+            <h2 class="footer-logo">
+                <a href="#" class="logo">WebStudio </a>
+            </h2>
 
-        <address>
-            <ul>
-                <li class="white-address">
-                    <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park Ave,
-                        New York, NY 10065,
-                        <br>United States</a>
-                </li>
-                <li>
-                    <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
-                </li>
-            </ul>
-        </address>
+            <address>
+                <ul>
+                    <li class="white-address">
+                        <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park
+                            Ave,
+                            New York, NY 10065,
+                            <br>United States</a>
+                    </li>
+                    <li>
+                        <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
+                    </li>
+                    <li>
+                        <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
+                    </li>
+                </ul>
+            </address>
+        </div>
     </footer>
 </body>
 
