--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
 
     <header class="header-section">
         <div class="container header-container">
-            <nav>
+            <nav class="header-navigation-link">
                 <!--Top bar -->
 
-                <h1 class="header-navigation-link">
-                    <a href="./index.html" class="logo header-logo ">WebStudio</a>
-                </h1>
+                <a href="./index.html" class="logo , header-logo ">WebStudio</a>
+
                 <ul class="navigation-list-1">
 
                     <li class="navigation-item">
@@ -60,13 +59,12 @@
             <div class="container">
                 <!--Button middle segment-->
 
-                <h2 class="hero-titles"> EFFECTIVE SOLUTIONS FOR<br> YOUR BUSINESS</h2>
+                <h1 class="hero-titles"> EFFECTIVE SOLUTIONS FOR<br> YOUR BUSINESS</h1>
 
-                <section class="hero-button-positioning">
+                <!-- class="hero-button-positioning"> -->
 
-                    <button type="button" class="hero-button">Request Our Service</button>
+                <button type="button" class="hero-button hero-button-positioning">Request Our Service</button>
 
-                </section>
             </div>
         </section>
 
@@ -109,7 +107,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="images-padding-1">
             <!--images segment-->
             <div class="container">
                 <h2 class="title-for-images1"> What we do</h2>
@@ -138,45 +136,63 @@
 
                     <li class="profilepic-item">
                         <img src="./images/profilespic1.jpg" alt="Christopher Walker" width="270">
-                        <h3 class="profile-images-title"> Christopher Walker </h3>
-                        <p class="paragraphs">Product Designer</p>
+
+                        <div class="profile-pic-spaces-p-1">
+
+                            <h3 class="profile-images-title"> Christopher Walker </h3>
+                            <p class="paragraphs">Product Designer</p>
+                        </div>
                     </li>
                     <li class="profilepic-item">
                         <img src="./images/profilepic2.jpg" alt="Kylie Evans" width="270">
-                        <h3 class="profile-images-title"> Kylie Evans </h3>
-                        <p class="paragraphs">Frontend Developer</p>
+
+                        <div class="profile-pic-spaces-p-1">
+
+                            <h3 class="profile-images-title"> Kylie Evans </h3>
+                            <p class="paragraphs">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="profilepic-item">
                         <img src="./images/profilepic3.jpg" alt="Ryan Harris" width="270">
-                        <h3 class="profile-images-title"> Ryan Harris </h3>
-                        <p class="paragraphs">Marketing</p>
+
+                        <div class="profile-pic-spaces-p-1">
+
+                            <h3 class="profile-images-title"> Ryan Harris </h3>
+                            <p class="paragraphs">Marketing</p>
+                        </div>
                     </li>
                     <li class="profilepic-item">
                         <img src="./images/profilepic4.jpg" alt="Tyler Moore" width="270">
-                        <h3 class="profile-images-title"> Tyler Moore </h3>
-                        <p class="paragraphs">UI Designer</p>
+
+                        <div class="profile-pic-spaces-p-1">
+
+                            <h3 class="profile-images-title"> Tyler Moore </h3>
+                            <p class="paragraphs">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
 
-    <footer class="footer-paddings">
+    <footer class="footer-paddings-1">
         <!--Bottom segment-->
         <div class="container">
-            <a href="./index.html" class="logo">WebStudio</a>
+            <div class="footer-logo-1">
+                <a href="./index.html" class="logo">WebStudio</a>
+            </div>
             <address>
                 <ul>
-                    <li class="white-address">
+                    <li class="white-address footer-paragraph-space-1">
                         <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park
                             Ave,
                             New York, NY 10065,
                             <br>United States</a>
                     </li>
-                    <li>
+                    <li class="footer-paragraph-space-1">
                         <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="footer-paragraph-space-1">
                         <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
                     </li>
                 </ul>
