--- a/portfolio.html
+++ b/portfolio.html
@@ -18,10 +18,11 @@
 <body>
     <header class="header-section-2">
         <div class="container header-container-2">
-            <h1 class="header-navigation-link-2">
+
+            <nav class="header-navigation-link-2">
+
                 <a href="index.html" class="logo header-logo">WebStudio</a>
-            </h1>
-            <nav>
+
                 <ul class="navigation-list-2">
 
                     <li class="navigation-item-2">
@@ -136,22 +137,22 @@
     <footer class="footer-paddings-2">
         <div class="container">
             <!--footer-->
-            <h2 class="footer-logo">
+            <h2 class="footer-logo-2">
                 <a href="#" class="logo">WebStudio </a>
             </h2>
 
             <address>
                 <ul>
-                    <li class="white-address">
+                    <li class="white-address  footer-paragraph-space-2">
                         <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park
                             Ave,
                             New York, NY 10065,
                             <br>United States</a>
                     </li>
-                    <li>
+                    <li class="footer-paragraph-space-2">
                         <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
                     </li>
-                    <li>
+                    <li class="footer-paragraph-space-2">
                         <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
                     </li>
                 </ul>
