--- a/portfolio.html
+++ b/portfolio.html
@@ -16,36 +16,40 @@
 </head>
 
 <body>
-    <header class="header-section-2">
-        <div class="container header-container-2">
+    <header class="header-section">
+        <div class="container header-container">
+            <nav class="header-navigation-link">
+                <!--Top bar -->
 
-            <nav class="header-navigation-link-2">
+                <a href="./index.html" class="logo , header-logo ">WebStudio</a>
 
-                <a href="index.html" class="logo header-logo">WebStudio</a>
+                <ul class="navigation-list-1">
 
-                <ul class="navigation-list-2">
-
-                    <li class="navigation-item-2">
-                        <a href="index.html" class="header-navigation-link ">Studio</a>
+                    <li class="navigation-item">
+                        <a href="./index.html" class="header-navigation-link">Studio</a>
                     </li>
-                    <li class="navigation-item-2">
-                        <a href="portfolio.html" class="header-navigation-link 
-                    header-navigation-link-current">Portfolio</a>
+
+                    <li class="navigation-item">
+                        <a href="portfolio.html"
+                            class="header-navigation-link  header-navigation-link-current">Portfolio</a>
                     </li>
-                    <li class="navigation-item-2">
+
+                    <li class="navigation-item">
                         <a href="#" class="header-navigation-link">Contacts</a>
                     </li>
                 </ul>
-
             </nav>
-            <ul class="header-contacts-2">
-                <li class="navigation-contact-info-2">
-                    <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com</a>
+
+            <ul class="header-contacts-1">
+
+                <!--Contacts/email-->
+                <li class="navigation-contact-info-1">
+                    <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com </a>
+                </li>
+                <li class="navigation-contact-info-1">
+                    <a href="tel:+12127724150" class="header-link">+1 212-772-4150 </a>
                 </li>
 
-                <li class="navigation-contact-info-2">
-                    <a href="tel:+12127724150" class="header-link">+1 212-772-4150</a>
-                </li>
             </ul>
         </div>
     </header>
@@ -78,81 +82,104 @@
 
                     <li class="computerimg1-9-same">
                         <img src="images/computerpic.jpg" alt="computer" width="370">
-                        <h3 class="profile-images-title-2">Technoduck</h3>
-                        <p class="paragraphs2">Web-site</p>
+                        <div class="profile-pic-spaces-p-2">
+                            <h3 class="profile-images-title-2">Technoduck</h3>
+                            <p class="paragraphs2">Web-site</p>
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/baskitballpic.jpg" alt="baskitball" width="370">
-                        <h3 class="profile-images-title-2">Poster New Orlean vs Golden Star</h3>
-                        <p class="paragraphs2">Design</p>
+                        <div class="profile-pic-spaces-p-2">
+                            <h3 class="profile-images-title-2">Poster New Orlean vs Golden Star</h3>
+                            <p class="paragraphs2">Design</p>
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/seafoodpic.jpg" alt="seafoodpic" width="370">
-                        <h3 class="profile-images-title-2">Seafood Restaurant</h3>
-                        <p class="paragraphs2">Apps</p>
+                        <div class="profile-pic-spaces-p-2">
+
+                            <h3 class="profile-images-title-2">Seafood Restaurant</h3>
+                            <p class="paragraphs2">Apps</p>
+
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/headphonespic.jpg" alt="headphones" width="370">
-                        <h3 class="profile-images-title-2">Project Prime</h3>
-                        <p class="paragraphs2">Marketing</p>
+                        <div class="profile-pic-spaces-p-2">
+
+                            <h3 class="profile-images-title-2">Project Prime</h3>
+                            <p class="paragraphs2">Marketing</p>
+
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/brickpic.jpg" alt="brickpic" width="370">
-                        <h3 class="profile-images-title-2">Project Boxes</h3>
-                        <p class="paragraphs2">Apps</p>
+                        <div class="profile-pic-spaces-p-2">
+                            <h3 class="profile-images-title-2">Project Boxes</h3>
+                            <p class="paragraphs2">Apps</p>
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/screenpic.jpg" alt="screenpic" width="370">
-                        <h3 class="profile-images-title-2">Inspiration has no Borders</h3>
-                        <p class="paragraphs2">Web-site</p>
+                        <div class="profile-pic-spaces-p-2">
+
+                            <h3 class="profile-images-title-2">Inspiration has no Borders</h3>
+                            <p class="paragraphs2">Web-site</p>
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/bookpic.jpg" alt="bookpic" width="370">
-                        <h3 class="profile-images-title-2">Limited Edition</h3>
-                        <p class="paragraphs2">Design</p>
+                        <div class="profile-pic-spaces-p-2">
+                            <h3 class="profile-images-title-2">Limited Edition</h3>
+                            <p class="paragraphs2">Design</p>
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/labeltacpic.jpg" alt="labelpic" width="370">
-                        <h3 class="profile-images-title-2">Project LAB</h3>
-                        <p class="paragraphs2">Marketing</p>
+                        <div class="profile-pic-spaces-p-2">
+
+                            <h3 class="profile-images-title-2">Project LAB</h3>
+                            <p class="paragraphs2">Marketing</p>
+                        </div>
                     </li>
 
                     <li class="computerimg1-9-same">
                         <img src="images/typingpic.jpg" alt="typingpic" width="370">
-                        <h3 class="profile-images-title-2">Growing Business</h3>
-                        <p class="paragraphs2">Apps</p>
+                        <div class="profile-pic-spaces-p-2">
+
+                            <h3 class="profile-images-title-2">Growing Business</h3>
+                            <p class="paragraphs2">Apps</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
 
-    <footer class="footer-paddings-2">
+    <footer class="footer-paddings-1">
         <div class="container">
-            <!--footer-->
-            <h2 class="footer-logo-2">
-                <a href="#" class="logo">WebStudio </a>
-            </h2>
-
+            <div class="footer-logo-1">
+                <a href="./index.html" class="logo">WebStudio</a>
+            </div>
             <address>
                 <ul>
-                    <li class="white-address  footer-paragraph-space-2">
+                    <li class="white-address footer-paragraph-space-1">
                         <a href="https://goo.gl/maps/Pc82vpNhHuvUtrE47" target="_blank" class="white-address">695 Park
                             Ave,
                             New York, NY 10065,
                             <br>United States</a>
                     </li>
-                    <li class="footer-paragraph-space-2">
+                    <li class="footer-paragraph-space-1">
                         <a href="mailto:info@example.com" class="mail-tele-color">info@example.com</a>
                     </li>
-                    <li class="footer-paragraph-space-2">
+                    <li class="footer-paragraph-space-1">
                         <a href="tel: +1 212-772-4150" class="mail-tele-color">+1 212-772-4150 </a>
                     </li>
                 </ul>
