--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <nav class="header-navigation-link">
                 <!--Top bar -->
 
-                <a href="./index.html" class="logo , header-logo ">WebStudio</a>
+                <a href="./index.html" class="logo  header-logo ">WebStudio</a>
 
                 <ul class="navigation-list-1">
 
