--- a/portfolio.html
+++ b/portfolio.html
@@ -56,11 +56,11 @@
 
     <main class="mainpagesyle">
         <!-- buttons/filters for the body-->
-        <section>
+        <section class="main-page">
             <div class="container">
                 <ul class="filters-all-buttons">
 
-                    <li class="all-blue-button button-positioning-list-2">
+                    <li class="all-buttons button-positioning-list-2">
                         <button type="button">All</button>
                     </li>
                     <li class="all-buttons button-positioning-list-2">
