--- a/index.html
+++ b/index.html
@@ -44,9 +44,15 @@
 
                 <!--Contacts/email-->
                 <li class="navigation-contact-info-1">
+
+                    <!--   <img class="icon-space" src="./images/icons.svg/envelopesvg.svg" alt="envelope" width="auto"> -->
+
                     <a href="mailto:info@devstudio.com" class="header-link">info@devstudio.com </a>
                 </li>
                 <li class="navigation-contact-info-1">
+
+                    <!--  <img class="icon-space" src="./images/icons.svg/smartphonesvg.svg"> -->
+
                     <a href="tel:+380961111111" class="header-link">+38 096 111 11 11 </a>
                 </li>
 
@@ -76,12 +82,14 @@
                 <ul class="positioning-for-paragraphs-1">
 
                     <li class="paragraphs-item-1">
+                        <!--    <img class="futures-icon-svg" src="./images/icons.svg/antennasvg.svg" width="auto"> -->
                         <h3 class="titles-for-paragraphs">ATTENTION TO DETAILS</h3>
                         <p class="text-for-paragraphs">
                             We go into all the details and processes of your business to develop a customized solution.
                         </p>
                     </li>
                     <li class="paragraphs-item-1">
+                        <!--  <img class="futures-icon-svg" src="./images/icons.svg/clocksvg.svg" width="auto"> -->
                         <h3 class="titles-for-paragraphs">PUNCTUALITY</h3>
                         <p class="text-for-paragraphs">
                             With us, you can feel safe and secure. An important principle of the company: respect your
@@ -91,6 +99,7 @@
                         </p>
                     </li>
                     <li class="paragraphs-item-1">
+                        <!--  <img class="futures-icon-svg" src="./images/icons.svg/diagramsvg.svg" width="auto">    -->
                         <h3 class="titles-for-paragraphs">PLANNING</h3>
                         <p class="text-for-paragraphs">
                             You will be able to observe and participate in every phase of solution development and
@@ -98,6 +107,7 @@
                         </p>
                     </li>
                     <li class="paragraphs-item-1">
+                        <!--    <img class="futures-icon-svg" src="./images/icons.svg/astronautsvg.svg" width="auto">   -->
                         <h3 class="titles-for-paragraphs">MODERN TECHNOLOGIES</h3>
                         <p class="text-for-paragraphs">
                             We use innovative tools to solve assigned tasks. It's time to simplify work processes.
@@ -141,6 +151,14 @@
 
                             <h3 class="profile-images-title"> Christopher Walker </h3>
                             <p class="paragraphs">Product Designer</p>
+                            <!--
+                            <div class="icon-list-profilepics">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/ellipsesvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/twittersvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                            </div>
+-->
                         </div>
                     </li>
                     <li class="profilepic-item">
@@ -150,6 +168,14 @@
 
                             <h3 class="profile-images-title"> Kylie Evans </h3>
                             <p class="paragraphs">Frontend Developer</p>
+                            <!--
+                            <div class="icon-list-profilepics">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/ellipsesvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/twittersvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                            </div>
+                            -->
                         </div>
                     </li>
                     <li class="profilepic-item">
@@ -159,6 +185,15 @@
 
                             <h3 class="profile-images-title"> Ryan Harris </h3>
                             <p class="paragraphs">Marketing</p>
+                            <!--
+                            <div class="icon-list-profilepics">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/ellipsesvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/twittersvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                            </div>
+
+                    -->
                         </div>
                     </li>
                     <li class="profilepic-item">
@@ -168,6 +203,14 @@
 
                             <h3 class="profile-images-title"> Tyler Moore </h3>
                             <p class="paragraphs">UI Designer</p>
+                            <!--
+                            <div class="icon-list-profilepics">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/ellipsesvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/twittersvg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                                <img class="icons-for-profilepics" src="./images/icons.svg/svg.svg">
+                            </div>
+                            -->
                         </div>
                     </li>
                 </ul>
